--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -39,7 +39,7 @@ jobs:
 
       # Запуск тестов
       - name: Run tests
-        run: pytest --junitxml=results/test-results.xml
+        run: pytest --clean-alluredir --junitxml=results/test-results.xml
 
       # Загрузка артефактов
       - name: Uploading artefacts
@@ -79,7 +79,7 @@ jobs:
           PUBLISH_DIR: allure-history
 
       # Публикация результата прогона в testIT
-      - name: Submit results
+      - name: Submit results testIT
         if: always()
         run: |
           pip install testit-cli
