--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -84,8 +84,8 @@ jobs:
         run: |
           pip install testit-cli
           testit results import \
-            --url https://team-wuas.testit.software/ \
-            --project-id 87c7eb78-be36-4e13-9e36-651ca3d5f060 \
-            --configuration-id 36238c9d-da5e-4cca-a8c4-f0d8316d3f6b \
-            --testrun-name "GitHub test run" \
-            --results results/test-results.xml
+            -u https://team-wuas.testit.software/ \
+            -pi 87c7eb78-be36-4e13-9e36-651ca3d5f060 \
+            -ci 36238c9d-da5e-4cca-a8c4-f0d8316d3f6b \
+            -tn "GitHub test run" \
+            -re results/test-results.xml
