--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,7 +1,8 @@
 name: Playwright Tests
 
 # Определение события, запускающего workflow
-on:
+on: 
+  workflow_dispatch:
   push:
     branches: [ main, master ]
   pull_request:
