--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -86,8 +86,8 @@ jobs:
         run: |
           pip install testit-cli
           testit results import \
-            --url <YOUR_INSTANCE_URL> \
-            --project-id 5236eb3f-7c05-46f9-a609-dc0278896464 \
-            --configuration-id 15dbb164-c1aa-4cbf-830c-8c01ae14f4fb \
+            --url https://team-wuas.testit.software/ \
+            --project-id 87c7eb78-be36-4e13-9e36-651ca3d5f060 \
+            --configuration-id 36238c9d-da5e-4cca-a8c4-f0d8316d3f6b \
             --testrun-name "GitHub test run" \
             --results results/test-results.xml
