--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -85,8 +85,8 @@ jobs:
         if: always()
         run: |
           pip install testit-cli
+          export TMS_TOKEN=${{ secrets.TMS_TOKEN }}
           testit results import \
-            --token ${{ secrets.TMS_TOKEN }}
             --url https://team-wuas.testit.software/ \
             --project-id 87c7eb78-be36-4e13-9e36-651ca3d5f060 \
             --configuration-id 36238c9d-da5e-4cca-a8c4-f0d8316d3f6b \
