--- a/connection_config.ini
+++ b/connection_config.ini
@@ -1,6 +1,6 @@
 [testit]
 URL = https://team-wuas.testit.software/
-privateToken = MzhKbTF3VXdLZE5BWXBRelJj
+privateToken = {TMS_PRIVATE_TOKEN}
 projectId = 87c7eb78-be36-4e13-9e36-651ca3d5f060
 configurationId = 36238c9d-da5e-4cca-a8c4-f0d8316d3f6b
 #testRunId = TEST_RUN_ID
