--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,6 +17,9 @@ jobs:
     
     # запуск на виртуальной машине
     runs-on: ubuntu-latest
+    env:
+      USER_PASS: ${{ secrets.USER_PASS }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
     steps:
     
       # Клонирование репозитория
@@ -37,7 +40,8 @@ jobs:
       # Установка браузеров     
       - name: Ensure browsers are installed
         run: python -m playwright install --with-deps
-
+      
+      # Установка переменной окружения для connection_config.ini
       - name: Set up environment
         run: |
           sed -i 's/{TMS_TOKEN}/${{ secrets.TMS_TOKEN }}/g' connection_config.ini
@@ -91,7 +95,7 @@ jobs:
           #export TMS_TOKEN=${{ secrets.TMS_TOKEN }}
           testit results import \
             --url https://team-wuas.testit.software/ \
-            --token ${{ secrets.TMS_TOKEN }}
+            --token ${{ secrets.TMS_TOKEN }} \
             --project-id 87c7eb78-be36-4e13-9e36-651ca3d5f060 \
             --configuration-id 36238c9d-da5e-4cca-a8c4-f0d8316d3f6b \
             --testrun-name "GitHub test run" \
