--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -48,7 +48,7 @@ jobs:
 
       # Запуск тестов
       - name: Run tests
-        run: pytest --testit --clean-alluredir --junitxml=results/test-results.xml -m test_for_ci
+        run: pytest --testit --clean-alluredir --junitxml=results/test-results.xml
 
       # Загрузка артефактов
       - name: Uploading artefacts
