--- a/.github/workflows/test_for_testIT.yml
+++ b/.github/workflows/test_for_testIT.yml
@@ -41,7 +41,7 @@ jobs:
           sed -i 's/{TMS_TOKEN}/${{ secrets.TMS_TOKEN }}/g' connection_config.ini
       # Запуск тестов
       - name: Run tests
-        run: pytest --testit --clean-alluredir --junitxml=results/test-results.xml -m test_for_ci
+        run: pytest --junitxml=results/test-results.xml -m test_for_ci
 
       # # Загрузка артефактов
       # - name: Uploading artefacts
