Проставил айдишник к тесту и адаптер мод=0

--- a/connection_config.ini
+++ b/connection_config.ini
@@ -6,7 +6,7 @@ configurationId = 36238c9d-da5e-4cca-a8c4-f0d8316d3f6b
 #testRunId = TEST_RUN_ID
 testRunName = Run_pytest
 # для запуска в
-adapterMode = 2
+# adapterMode = 2
 #certValidation = false
 #automaticCreationTestCases = true
 #automaticUpdationLinksToTestCases = true
