Добавил id тестрана, переименовал тест на создание заказа

--- a/connection_config.ini
+++ b/connection_config.ini
@@ -3,10 +3,9 @@ URL = https://team-wuas.testit.software/
 privateToken = {TMS_TOKEN}
 projectId = 87c7eb78-be36-4e13-9e36-651ca3d5f060
 configurationId = 36238c9d-da5e-4cca-a8c4-f0d8316d3f6b
-#testRunId = TEST_RUN_ID
+testRunId = 778c8c69-0e57-4445-883a-8cf2789abe4e
 testRunName = Run_pytest
-# для запуска в
-# adapterMode = 2
+adapterMode = 0
 #certValidation = false
 #automaticCreationTestCases = true
 #automaticUpdationLinksToTestCases = true
