--- a/connection_config.ini
+++ b/connection_config.ini
@@ -3,7 +3,7 @@ URL = https://team-wuas.testit.software/
 privateToken = {TMS_TOKEN}
 projectId = 87c7eb78-be36-4e13-9e36-651ca3d5f060
 configurationId = 36238c9d-da5e-4cca-a8c4-f0d8316d3f6b
-testRunId = 47f4420e-0d72-45a0-98e5-2527b14e5b90
+testRunId = $TEST_RUN_ID
 testRunName = Run_pytest
 adapterMode = 0
 #certValidation = false
