--- a/connection_config.ini
+++ b/connection_config.ini
@@ -3,9 +3,9 @@ URL = https://team-wuas.testit.software/
 privateToken = {TMS_TOKEN}
 projectId = 87c7eb78-be36-4e13-9e36-651ca3d5f060
 configurationId = 36238c9d-da5e-4cca-a8c4-f0d8316d3f6b
-testRunId = $TEST_RUN_ID
+;testRunId = $TEST_RUN_ID
 testRunName = Run_pytest
-adapterMode = 0
+adapterMode = 2
 #certValidation = false
 #automaticCreationTestCases = true
 #automaticUpdationLinksToTestCases = true
