--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -48,7 +48,7 @@ jobs:
 
       # Запуск тестов
       - name: Run tests
-        run: pytest --testit
+        run: pytest --clean-alluredir
       # Загрузка артефактов
       - name: Uploading artefacts
         uses: actions/upload-artifact@v4
