--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,6 +20,8 @@ jobs:
     env:
       USER_PASS: ${{ secrets.USER_PASS }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      TESTMAIL_JSON: ${{ secrets.TESTMAIL_JSON}}
+      TESTMAIL_ADRESS: ${{ secrets.TESTMAIL_ADRESS}}
     steps:
     
       # Клонирование репозитория
