--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -51,6 +51,7 @@ jobs:
       # Запуск тестов
       - name: Run tests
         run: pytest --clean-alluredir
+        
       # Загрузка артефактов
       - name: Uploading artefacts
         uses: actions/upload-artifact@v4
@@ -88,16 +89,16 @@ jobs:
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
 
-      Публикация результата прогона в testIT
-      - name: Submit results testIT
-        if: always()
-        run: |
-          pip install testit-cli
-          #export TMS_TOKEN=${{ secrets.TMS_TOKEN }}
-          testit results import \
-            --url https://team-wuas.testit.software/ \
-            --token ${{ secrets.TMS_TOKEN }} \
-            --project-id 87c7eb78-be36-4e13-9e36-651ca3d5f060 \
-            --configuration-id 36238c9d-da5e-4cca-a8c4-f0d8316d3f6b \
-            --testrun-name "GitHubtestrun" \
-            --results results/test-results.xml
+      # Публикация результата прогона в testIT
+      # - name: Submit results testIT
+      #   if: always()
+      #   run: |
+      #     pip install testit-cli
+      #     #export TMS_TOKEN=${{ secrets.TMS_TOKEN }}
+      #     testit results import \
+      #       --url https://team-wuas.testit.software/ \
+      #       --token ${{ secrets.TMS_TOKEN }} \
+      #       --project-id 87c7eb78-be36-4e13-9e36-651ca3d5f060 \
+      #       --configuration-id 36238c9d-da5e-4cca-a8c4-f0d8316d3f6b \
+      #       --testrun-name "GitHubtestrun" \
+      #       --results results/test-results.xml
