--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,7 +16,7 @@ jobs:
     timeout-minutes: 60
     
     # запуск на виртуальной машине
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       USER_PASS: ${{ secrets.USER_PASS }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
