--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -50,7 +50,7 @@ jobs:
 
       # Запуск тестов
       - name: Run tests
-        run: pytest --clean-alluredir
+        run: pytest
         
       # Загрузка артефактов
       - name: Uploading artefacts
