--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,6 +22,9 @@ jobs:
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       TESTMAIL_JSON: ${{ secrets.TESTMAIL_JSON}}
       TESTMAIL_ADRESS: ${{ secrets.TESTMAIL_ADRESS}}
+      TESTMAIL_JSON_EMPTY: ${{ secrets.TESTMAIL_JSON_EMPTY}}
+      TESTMAIL_ADRESS_EMPTY: ${{ secrets.TESTMAIL_ADRESS_EMPTY}}
+      
     steps:
     
       # Клонирование репозитория
