--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,6 +14,9 @@ on:
 jobs:
   test:
     timeout-minutes: 60
+
+    # Уникальный ключ для группы задач предназначен для того, чтобы повторный запуск Джобы вставал в ожидание, не конфликтуая с первым
+    concurrency: playwright-tests  
     
     # запуск на виртуальной машине
     runs-on: ubuntu-22.04
