--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -61,7 +61,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: allure-results
+          name: allure-results-${{ github.run_id }}
           path: allure-results/
 
   # Тест на создание заказа
@@ -109,7 +109,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: allure-results
+          name: allure-results-${{ github.run_id }}
           path: allure-results/
 
   # Обьединение отчетов по всем тестам
