--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -1,4 +1,4 @@
-name: Playwright_oreder Tests
+name: Playwright_order Tests
 
 # Определение события, запускающего workflow
 on:
@@ -61,7 +61,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: allure-results-${{ github.run_id }}
+          name: allure-results-main-${{ github.run_id }}
           path: allure-results/
 
   # Тест на создание заказа
@@ -71,8 +71,8 @@ jobs:
     runs-on: ubuntu-22.04
     if: github.event.schedule == '0 8 * * *' || github.event_name == 'workflow_dispatch'
 
-    # # Уникальный ключ для группы задач предназначен для того, чтобы повторный запуск Джобы вставал в ожидание, не конфликтуая с первым
-    # concurrency: playwright-tests
+    # Уникальный ключ для группы задач предназначен для того, чтобы повторный запуск Джобы вставал в ожидание, не конфликтуая с первым
+    concurrency: playwright-tests
 
     steps:
 
@@ -109,7 +109,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: allure-results-${{ github.run_id }}
+          name: allure-results-order-${{ github.run_id }}
           path: allure-results/
 
   # Обьединение отчетов по всем тестам
@@ -120,8 +120,9 @@ jobs:
       - name: Download Allure Results
         uses: actions/download-artifact@v4
         with:
-          name: allure-results
+          pattern: allure-results-*
           path: allure-results
+          merge-multiple: true
 
       # Получение истории прогонов Allure
       - name: Get Allure history
