--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -52,16 +52,16 @@ jobs:
         run: |
           sed -i 's/{TMS_TOKEN}/${{ secrets.TMS_TOKEN }}/g' connection_config.ini
 
+      # Запуск тестов
+      - name: Run tests
+        run: pytest --reruns 2 --reruns-delay 3 -m "for_order" --alluredir=allure-results 
+
       # Сохранение файла авторизации
       - name: Save auth state
         uses: actions/upload-artifact@v4
         with:
           name: auth-state
           path: auth_state.json
-
-      # Запуск тестов
-      - name: Run tests
-        run: pytest --reruns 2 --reruns-delay 3 --alluredir=allure-results
 
       # Загрузка артефактов
       - name: Upload Allure Results
@@ -107,16 +107,16 @@ jobs:
         run: |
           sed -i 's/{TMS_TOKEN}/${{ secrets.TMS_TOKEN }}/g' connection_config.ini
 
-      # Запуск тестов
-      - name: Run only test_create_order
-        run: pytest --reruns 2 --reruns-delay 3 -m "custom_schedule" --alluredir=allure-results
-
       # Загрузка файла авторизации
       - name: Download auth state
         uses: actions/download-artifact@v4
         with:
           name: auth-state
           path: .
+
+      # Запуск тестов
+      - name: Run only test_create_order
+        run: pytest --reruns 2 --reruns-delay 3 -m "custom_schedule" --alluredir=allure-results
 
       # Загрузка артефактов
       - name: Upload Allure Results
