--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -2,10 +2,10 @@ name: Playwright_order Tests
 
 # Определение события, запускающего workflow
 on:
-  workflow_dispatch:
+  # workflow_dispatch:
   schedule:
     - cron: '0 */12 * * *' # Основные тесты
-    - cron: '0 8 * * *'    # Тест создания заказа (в 08:00)
+    # - cron: '0 8 * * *'    # Тест создания заказа (в 08:00)
 
 # Определение Задачи(job)
 jobs:
@@ -56,12 +56,12 @@ jobs:
       - name: Run tests
         run: pytest --reruns 2 --reruns-delay 3 -m "for_order" --alluredir=allure-results 
 
-      # Сохранение файла авторизации
-      - name: Save auth state
-        uses: actions/upload-artifact@v4
+     # Сохранение auth_state.json в кеш
+      - name: Cache auth state
+        uses: actions/cache@v3
         with:
-          name: auth-state
           path: auth_state.json
+          key: auth-state-${{ github.run_id }}
 
       # Загрузка артефактов
       - name: Upload Allure Results
@@ -73,10 +73,10 @@ jobs:
 
   # Тест на создание заказа
   order-test:
-    needs: test  # Теперь вторая джоба ждет окончания первой
+    needs: test  # order-test ждет окончания test если он запущен
     # запуск на виртуальной машине
     runs-on: ubuntu-22.04
-    if: github.event.schedule == '0 8 * * *'
+    if: github.event.schedule == '0 */24 * * *' || github.event_name == 'workflow_dispatch'
 
     # Уникальный ключ для группы задач предназначен для того, чтобы повторный запуск Джобы вставал в ожидание, не конфликтуая с первым
     concurrency: playwright-tests
@@ -107,12 +107,13 @@ jobs:
         run: |
           sed -i 's/{TMS_TOKEN}/${{ secrets.TMS_TOKEN }}/g' connection_config.ini
 
-      # Загрузка файла авторизации
-      - name: Download auth state
-        uses: actions/download-artifact@v4
+      # Восстанавливаем кеш auth_state.json
+      - name: Restore cached auth state
+        uses: actions/cache@v3
         with:
-          name: auth-state
-          path: .
+          path: auth_state.json
+          key: auth-state-${{ github.run_id }}
+          restore-keys: auth-state-
 
       # Запуск тестов
       - name: Run only test_create_order
