--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -18,7 +18,7 @@ jobs:
     concurrency: playwright-tests
 
     # запуск на виртуальной машине
-    if: github.event_name == 'schedule' && github.event.schedule == '0 */12 * * *'
+    if: github.event_name == 'schedule' && github.event.schedule == '0 */12 * * *' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-22.04
     env:
       USER_PASS: ${{ secrets.USER_PASS }}
@@ -116,6 +116,29 @@ jobs:
           path: auth_state.json
           key: auth-state-${{ github.run_id }}
           restore-keys: auth-state-
+          
+      # Опрашиваем статус выполнения test
+      - name: Wait for test job to complete
+        run: |
+          echo "Checking status of test job..."
+          while true; do
+            # Получаем статус задачи test через GitHub API
+            STATUS=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Accept: application/vnd.github.v3+json" \
+              "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs" \
+              | jq -r '.jobs[] | select(.name == "test") | .status')
+
+            if [[ "$STATUS" == "completed" ]]; then
+              echo "Test job is completed."
+              break
+            elif [[ "$STATUS" == "in_progress" || "$STATUS" == "queued" ]]; then
+              echo "Test job is still running or queued. Waiting..."
+              sleep 60
+            else
+              echo "Test job status is unknown: $STATUS"
+              exit 1
+            fi
+          done
 
       # Запуск тестов
       - name: Run only test_create_order
