--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,13 +2,13 @@ name: Playwright Tests
 
 # Определение события, запускающего workflow
 on: 
-  workflow_dispatch:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-  schedule:
-    - cron: '0 */12 * * *'
+  # workflow_dispatch:
+  # push:
+  #   branches: [ main, master ]
+  # pull_request:
+  #   branches: [ main, master ]
+  # schedule:
+  #   - cron: '0 */12 * * *'
 
 # Определение Задачи(job)
 jobs:
