--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,7 +2,7 @@ name: Playwright Tests
 
 # Определение события, запускающего workflow
 on: 
-  # workflow_dispatch:
+  workflow_dispatch:
   # push:
   #   branches: [ main, master ]
   # pull_request:
