--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -181,6 +181,12 @@ jobs:
           ref: gh-pages
           path: gh-pages
 
+      # Копирование истории в allure-results перед генерацией отчета
+      - name: Copy previous Allure history
+        run: |
+          mkdir -p allure-results
+          cp -r gh-pages/allure-history allure-results/ || echo "No previous history found"
+
       # Генерация отчета с учетом истории прогонов
       - name: Generate Allure report
         uses: simple-elf/allure-report-action@master
@@ -192,21 +198,21 @@ jobs:
           allure_report: allure-report
           allure_history: allure-history
 
-      # Загрузка артефактов
-      - name: Upload Allure Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-report
-          path: allure-report
+      # Загрузка артефактов (требуется для построения отчетов в ручную или для отправки в другие системы)
+      # - name: Upload Allure Report
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: allure-report
+      #     path: allure-report
 
       # Публикация отчета Allure  
       - name: Publish Allure report
         uses: peaceiris/actions-gh-pages@v2
         if: always()
-        env:
-          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: gh-pages
+          keep_files: true  #  Сохраняем историю отчетов
 
       # Публикация результата прогона в testIT
       # - name: Submit results testIT
