Добавил описание маркировок

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,15 @@
 [pytest]
 addopts = -v -s --alluredir allure-results --slowmo 1000
 markers =
-    smoke: mark for smoke tests
-    regress: mark for regress tests
-    test_for_ci
+    smoke: маркировка для смоук тестов
+    regress: маркировка для регрессионных тестов
+    auth: маркировка позволяет использоватать файл состояния авторизации auth_state.json
+    auth_empty: маркировка позволяет использоватать файл состояния авторизации auth_state_empty.json
+    testit_case_title: маркировка для теста testit
+    for_order: маркировка для тестирования workflow Playwright_order Tests for history
+    for_test: маркировка для теста
+    for_test_2: маркировка для теста
+    test_for_ci: маркировка для теста
+    custom_schedule: маркировка для теста на создания заказа
+
 testpaths = tests
