--- a/.github/workflows/playwright_order_test.yml
+++ b/.github/workflows/playwright_order_test.yml
@@ -182,23 +182,27 @@ jobs:
         with:
           ref: gh-pages
           path: gh-pages
+          fetch-depth: 0
 
       # Копирование истории в allure-results перед генерацией отчета
       - name: Copy previous Allure history
         run: |
           mkdir -p allure-results
-          cp -r gh-pages/allure-history allure-results/ || echo "No previous history found"
+          if [ -d "gh-pages/allure-history" ]; then
+            cp -r gh-pages/allure-history allure-results/
+          else
+            echo "No previous history found"
+          fi
 
       # Генерация отчета с учетом истории прогонов
       - name: Generate Allure report
         uses: simple-elf/allure-report-action@master
         if: always()
-        id: allure-report
         with:
-          allure_results: allure-results
-          gh_pages: gh-pages
-          allure_report: allure-report
-          allure_history: allure-history
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./allure-report
+          keep_files: true
+          allow_empty_commit: true
 
       # Загрузка артефактов (требуется для построения отчетов в ручную или для отправки в другие системы)
       # - name: Upload Allure Report
