--- a/.github/workflows/playwright_order_test.yml
+++ b/.github/workflows/playwright_order_test.yml
@@ -164,7 +164,7 @@ jobs:
   # Обьединение отчетов по всем тестам
   merge-reports:
     needs: [test, order-test]
-    if: always()  # Запуск даже если одна из джоб была пропущена
+    if: always()
     runs-on: ubuntu-22.04
     steps:
       - name: Download Allure Results
@@ -176,46 +176,67 @@ jobs:
 
       # Получение истории прогонов Allure
       - name: Get Allure history
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4  # Обновляем до v4
         if: always()
         continue-on-error: true
         with:
           ref: gh-pages
           path: gh-pages
-          fetch-depth: 0
 
-      # Копирование истории в allure-results перед генерацией отчета
-      - name: Copy previous Allure history
+      # Создаем директорию для текущего отчета с timestamp
+      - name: Create report directory
         run: |
-          mkdir -p allure-results
-          if [ -d "gh-pages/allure-history" ]; then
-            cp -r gh-pages/allure-history allure-results/
-          else
-            echo "No previous history found"
-          fi
+          mkdir -p gh-pages/history/$(date +%Y%m%d_%H%M%S)
+          cp -r gh-pages/history/latest/* allure-results/history/ || true
 
-      # Генерация отчета с учетом истории прогонов
+      # Генерация отчета Allure
       - name: Generate Allure report
         uses: simple-elf/allure-report-action@master
         if: always()
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./allure-report
-          keep_files: true
-          allow_empty_commit: true
+          allure_results: allure-results
+          allure_report: allure-report
+          allure_history: gh-pages/history/latest
+          keep_reports: 20
 
-      # Загрузка артефактов (требуется для построения отчетов в ручную или для отправки в другие системы)
-      # - name: Upload Allure Report
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: allure-report
-      #     path: allure-report
+      # Копируем текущий отчет в директорию с timestamp
+      - name: Copy report to timestamped directory
+        run: |
+          TIMESTAMP=$(date +%Y%m%d_%H%M%S)
+          cp -r allure-report/* gh-pages/history/$TIMESTAMP/
+          cp -r allure-report/* gh-pages/history/latest/
 
-      # Публикация отчета Allure  
+      # Создаем index.html со списком всех отчетов
+      - name: Generate index page
+        run: |
+          cd gh-pages/history
+          echo "<html><body><h1>Allure Reports History</h1><ul>" > index.html
+          for d in */ ; do
+            if [ "$d" != "latest/" ]; then
+              echo "<li><a href='./$d'>Report $d</a></li>" >> index.html
+            fi
+          done
+          echo "</ul></body></html>" >> index.html
+
+      # Публикация отчета Allure
       - name: Publish Allure report
         uses: peaceiris/actions-gh-pages@v3
         if: always()
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./allure-report
-          keep_files: true  # Сохраняем историю отчетов
+          publish_dir: gh-pages/history
+          keep_files: true
+
+      # Публикация результата прогона в testIT
+      # - name: Submit results testIT
+      #   if: always()
+      #   run: |
+      #     pip install testit-cli
+      #     #export TMS_TOKEN=${{ secrets.TMS_TOKEN }}
+      #     testit results import \
+      #       --url https://team-wuas.testit.software/ \
+      #       --token ${{ secrets.TMS_TOKEN }} \
+      #       --project-id 87c7eb78-be36-4e13-9e36-651ca3d5f060 \
+      #       --configuration-id 36238c9d-da5e-4cca-a8c4-f0d8316d3f6b \
+      #       --testrun-name "GitHubtestrun" \
+      #       --results results/test-results.xml
