Убрал формирование отчетов аллюр из pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -v -s --alluredir allure-results --slowmo 1000
+addopts = -v -s --slowmo 1000
 markers =
     smoke: маркировка для смоук тестов
     regress: маркировка для регрессионных тестов
