--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -77,6 +77,7 @@ jobs:
         with:
           name: allure-results-main-${{ github.run_id }}
           path: allure-results/
+          # retention_days: 10
 
   # Тест на создание заказа
   order-test:
@@ -160,6 +161,7 @@ jobs:
         with:
           name: allure-results-order-${{ github.run_id }}
           path: allure-results/
+          # retention_days: 10
 
   # Обьединение отчетов по всем тестам
   merge-reports:
