--- a/.github/workflows/playwright_order_test.yml
+++ b/.github/workflows/playwright_order_test.yml
@@ -26,12 +26,15 @@ jobs:
     env:
       USER_PASS: ${{ secrets.USER_PASS }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      TESTMAIL_JSON: ${{ secrets.TESTMAIL_JSON_ALT}}
-      TESTMAIL_ADRESS: ${{ secrets.TESTMAIL_ADRESS_ALT}}
+      TESTMAIL_JSON: ${{ secrets.TESTMAIL_JSON}}
+      TESTMAIL_ADRESS: ${{ secrets.TESTMAIL_ADRESS}}
       TESTMAIL_JSON_EMPTY: ${{ secrets.TESTMAIL_JSON_EMPTY}}
       TESTMAIL_ADRESS_EMPTY: ${{ secrets.TESTMAIL_ADRESS_EMPTY}}
       AUTH_USERNAME: ${{ secrets.AUTH_USERNAME}}
       AUTH_PASSWORD: ${{ secrets.AUTH_PASSWORD}}
+      JSON_SCHEMA: ${{ secrets.JSON_SCHEMA}}
+      JSON_SCHEMA_TEST: ${{ secrets.JSON_SCHEMA_TEST}}
+      METHOD: ${{ secrets.METHOD}}
 
     steps:
 
